exports[`(.not).toHaveNetworkAuthenticationRequiredStatus > using axios > .not.toHaveNetworkAuthenticationRequiredStatus > fails when response have status code 511 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveNetworkAuthenticationRequiredStatus()</intensity>

Expected status code to not be 511 received:
  <red>511</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 511,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveNetworkAuthenticationRequiredStatus > using axios > .toHaveNetworkAuthenticationRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveNetworkAuthenticationRequiredStatus()</intensity>

Expected status code to be 511 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
